--- a/lab2/lab2_siyuan/1_saxpy/Makefile_stream
+++ b/lab2/lab2_siyuan/1_saxpy/Makefile_stream
@@ -1,22 +1,24 @@
-EXECUTABLE := cudaSaxpy
-EXECUTABLE_UVM := cudaSaxpyUvm
+# EXECUTABLE := cudaSaxpy
+# EXECUTABLE_UVM := cudaSaxpyUvm
 EXECUTABLE_STREAM := cudaSaxpyStream
-CU_FILES   := saxpy_basic.cu saxpy_uvm.cu saxpy_stream.cu 
-CU_DEPS    :=
+# CU_FILES   := saxpy_stream.cu
+# CU_FILES   := saxpy_basic.cu saxpy_uvm.cu saxpy_stream.cu 
+CU_DEPS    := 
 CC_FILES   := main_stream.cpp
 
 DEBUG_ENABLED=0
-UVM_ENABLED=1
+UVM_ENABLED=0
 ###########################################################
 
 ARCH=$(shell uname | sed -e 's/-.*//g')
-CUDA_PATH="/opt/cuda"
+# CUDA_PATH=$(TACC_CUDA_PATH)
+CUDA_PATH=$(CUDA_DIR)
 OBJDIR=objs
-INC_FLAGS=-I../common -I/opt/cuda/include
+INC_FLAGS=-I../common
 CXX=g++ 
 CXXFLAGS=-O0  $(INC_FLAGS) #-Wall
 ifeq ($(DEBUG_ENABLED),1)
-CXXFLAGS += -g -DVERBOSE # for debugging
+CXXFLAGS += -g -VERBOSE # for debugging
 endif
 ifeq ($(UVM_ENABLED),1)
 CXXFLAGS += -DUVM_ENABLED
@@ -36,21 +38,23 @@ endif
 # CUDA code generation flags
 GENCODE_SM20    := -gencode arch=compute_20,code=sm_20
 GENCODE_SM30    := -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35
-GENCODE_SM50    := -gencode arch=compute_50,code=sm_50
+GENCODE_SM50    := -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 
 GENCODE_SM60    := -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61
 GENCODE_SM70    := -gencode arch=compute_70,code=sm_70 -gencode arch=compute_70,code=compute_70
-GENCODE_FLAGS   := $(GENCODE_SM50) # For Pascal architecture
+GENCODE_SM75    := -gencode arch=compute_75,code=sm_75 -gencode arch=compute_75,code=compute_75
+# GENCODE_FLAGS   := $(GENCODE_SM60) # For Pascal architecture
+GENCODE_FLAGS   := $(GENCODE_SM75) # For Quadro RTX 6000 architecture
 ################################################################################
 NVCC_LDFLAGS=-L$(CUDA_PATH)/lib64/ -lcudart -Wl,-rpath=$(CUDA_PATH)/lib64
 NVCC=$(CUDA_PATH)/bin/nvcc -ccbin=$(CXX) 
 NVCC_FLAGS=-O3 -m64 $(GENCODE_FLAGS) $(INC_FLAGS)
 
+CXXFLAGS += -I$(CUDA_PATH)/include/ -L$(CUDA_PATH)/lib64/ -lcudart
 
 COMMON_OBJS=$(OBJDIR)/main_stream.o 
-OBJS_BASIC=$(COMMON_OBJS) $(OBJDIR)/saxpy_basic.o 
+# OBJS_BASIC=$(COMMON_OBJS) $(OBJDIR)/saxpy_basic.o 
+# OBJS_UVM=$(COMMON_OBJS) $(OBJDIR)/saxpy_uvm.o 
 OBJS_STREAM=$(COMMON_OBJS) $(OBJDIR)/saxpy_stream.o 
-OBJS_UVM=$(COMMON_OBJS) $(OBJDIR)/saxpy_uvm.o 
-
 
 .PHONY: dirs clean
 
@@ -62,11 +66,11 @@ dirs:
 clean:
 		rm -rf $(OBJDIR) *~ $(EXECUTABLE) $(EXECUTABLE_UVM) $(EXECUTABLE_STREAM)
 
-$(EXECUTABLE): dirs $(OBJS_BASIC)
-		$(CXX) $(CXXFLAGS) -o $@ $(OBJS_BASIC) $(NVCC_LDFLAGS)
+# $(EXECUTABLE): dirs $(OBJS_BASIC)
+# 		$(CXX) $(CXXFLAGS) -o $@ $(OBJS_BASIC) $(NVCC_LDFLAGS)
 
-$(EXECUTABLE_UVM): dirs $(OBJS_UVM)
-		$(CXX) $(CXXFLAGS) -o $@ $(OBJS_UVM) $(NVCC_LDFLAGS)
+# $(EXECUTABLE_UVM): dirs $(OBJS_UVM)
+# 		$(CXX) $(CXXFLAGS) -o $@ $(OBJS_UVM) $(NVCC_LDFLAGS)
 
 $(EXECUTABLE_STREAM): dirs $(OBJS_STREAM)
 		$(CXX) $(CXXFLAGS) -o $@ $(OBJS_STREAM) $(NVCC_LDFLAGS)
