--- a/lab2/1_saxpy/Makefile_uvm
+++ b/lab2/1_saxpy/Makefile_uvm
@@ -11,9 +11,9 @@ UVM_ENABLED=0
 ###########################################################
 
 ARCH=$(shell uname | sed -e 's/-.*//g')
-# CUDA_PATH=$(TACC_CUDA_PATH)
-CUDA_PATH=$(CUDA_DIR)
-OBJDIR=objs
+CUDA_PATH ?= $(TACC_CUDA_PATH)
+# CUDA_PATH=$(CUDA_DIR)
+# OBJDIR=objs
 INC_FLAGS=-I../common
 CXX=g++ 
 CXXFLAGS=-O0  $(INC_FLAGS) #-Wall
@@ -42,8 +42,8 @@ GENCODE_SM50    := -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,
 GENCODE_SM60    := -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61
 GENCODE_SM70    := -gencode arch=compute_70,code=sm_70 -gencode arch=compute_70,code=compute_70
 GENCODE_SM75    := -gencode arch=compute_75,code=sm_75 -gencode arch=compute_75,code=compute_75
-# GENCODE_FLAGS   := $(GENCODE_SM60) # For Pascal architecture
-GENCODE_FLAGS   := $(GENCODE_SM75) # For Quadro RTX 6000 architecture
+GENCODE_FLAGS   := $(GENCODE_SM60) # For Pascal architecture
+# GENCODE_FLAGS   := $(GENCODE_SM75) # For Quadro RTX 6000 architecture
 ################################################################################
 NVCC_LDFLAGS=-L$(CUDA_PATH)/lib64/ -lcudart -Wl,-rpath=$(CUDA_PATH)/lib64
 NVCC=$(CUDA_PATH)/bin/nvcc -ccbin=$(CXX) 
