working MPI code

--- a/project/multiple_GPU/Makefile
+++ b/project/multiple_GPU/Makefile
@@ -1,5 +1,5 @@
 EXECUTABLE := phase_field
-CU_FILES   := PF.cu
+CU_FILES   := PF_mpi.cu
 CU_DEPS    :=
 CC_FILES   := main.cpp
 
@@ -15,9 +15,7 @@ OBJDIR=objs
 INC_FLAGS=-I../common
 CXX=g++ 
 CXXFLAGS=-O3 -Wall $(INC_FLAGS)
-MAT_PATH=/home1/apps/matlab/2020b
-MAT_FLAGS=$(MAT_PATH)/extern/include
-MAT_LDFLAGS=-L$(MAT_PATH)/bin/glnxa64
+MPICXX=mpicxx
 ################################################################################
 # When compiling with NVCC, the arch flag (-arch) specifies the name of 
 # the NVIDIA GPU architecture that the CUDA files will be compiled for.
@@ -36,17 +34,17 @@ GENCODE_SM30    := -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,
 GENCODE_SM50    := -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 
 GENCODE_SM60    := -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61
 GENCODE_SM70    := -gencode arch=compute_70,code=sm_70 -gencode arch=compute_70,code=compute_70
-GENCODE_FLAGS   := $(GENCODE_SM60) # For Pascal architecture
+GENCODE_FLAGS   := $(GENCODE_SM70) # For Pascal architecture
 ################################################################################
-NVCC_LDFLAGS=-L$(CUDA_PATH)/lib64/ -lcudart -Wl,-rpath=$(CUDA_PATH)/lib64:$(MAT_PATH)/bin/glnxa64
-NVCC=$(CUDA_PATH)/bin/nvcc -ccbin=$(CXX) 
+NVCC_LDFLAGS=-L$(CUDA_PATH)/lib64/ -lcudart -Wl,-rpath=$(CUDA_PATH)/lib64
+NVCC=$(CUDA_PATH)/bin/nvcc -ccbin=$(MPICXX) 
 NVCC_FLAGS=-O3 -m64 $(GENCODE_FLAGS) $(INC_FLAGS)
 
 #CXXFLAGS += -I$(CUDA_PATH)/include/ -L$(CUDA_PATH)/lib64/ -lcudart
 
-OBJS=$(OBJDIR)/main.o $(OBJDIR)/PF.o 
+OBJS=$(OBJDIR)/main.o $(OBJDIR)/PF_mpi.o 
 
-CXXFLAGS += -I$(CUDA_PATH)/include/ -I$(MAT_FLAGS) $(MAT_LDFLAGS) -L$(CUDA_PATH)/lib64/ -lcudart -lmat -lmx -Wl,-rpath=$(MAT_PATH)/bin/glnxa64
+CXXFLAGS += -I$(CUDA_PATH)/include/ -I$(MAT_FLAGS) $(MAT_LDFLAGS) -L$(CUDA_PATH)/lib64/ -lcudart 
 
 
 .PHONY: dirs clean
@@ -66,10 +64,10 @@ check_find_repeats: default
 				./checker.pl find_repeats
 
 $(EXECUTABLE): dirs $(OBJS)
-		$(CXX) $(CXXFLAGS) -o $@ $(OBJS) $(NVCC_LDFLAGS)
+		$(MPICXX) $(CXXFLAGS) -o $@ $(OBJS) $(NVCC_LDFLAGS)
 
 $(OBJDIR)/%.o: %.cpp
-		$(CXX) $< $(CXXFLAGS) -c -o $@
+		$(MPICXX) $< $(CXXFLAGS) -c -o $@
 
 $(OBJDIR)/%.o: %.cu
 		$(NVCC) $< $(NVCC_FLAGS) -c -o $@
