--- a/project/shared_mem/Makefile
+++ b/project/shared_mem/Makefile
@@ -10,12 +10,14 @@ LOGS	   := logs
 ###########################################################
 
 ARCH=$(shell uname | sed -e 's/-.*//g')
-CUDA_PATH=$(TACC_CUDA_DIR)
+# CUDA_PATH=$(TACC_CUDA_DIR)
+CUDA_PATH=$(CUDA_DIR)
 OBJDIR=objs
 INC_FLAGS=-I../common
 CXX=g++ 
 CXXFLAGS=-O3 -Wall $(INC_FLAGS)
-MAT_PATH=/home1/apps/matlab/2020b
+# MAT_PATH=/home1/apps/matlab/2020b
+MAT_PATH=/usr/local/packages/matlab_2019a
 MAT_FLAGS=$(MAT_PATH)/extern/include
 MAT_LDFLAGS=-L$(MAT_PATH)/bin/glnxa64
 ################################################################################
@@ -36,7 +38,8 @@ GENCODE_SM30    := -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,
 GENCODE_SM50    := -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 
 GENCODE_SM60    := -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61
 GENCODE_SM70    := -gencode arch=compute_70,code=sm_70 -gencode arch=compute_70,code=compute_70
-GENCODE_FLAGS   := $(GENCODE_SM60) # For Pascal architecture
+GENCODE_SM75    := -gencode arch=compute_75,code=sm_75 -gencode arch=compute_75,code=compute_75
+GENCODE_FLAGS   := $(GENCODE_SM75) # For Pascal architecture
 ################################################################################
 NVCC_LDFLAGS=-L$(CUDA_PATH)/lib64/ -lcudart -Wl,-rpath=$(CUDA_PATH)/lib64:$(MAT_PATH)/bin/glnxa64
 NVCC=$(CUDA_PATH)/bin/nvcc -ccbin=$(CXX) 
@@ -47,7 +50,6 @@ NVCC_FLAGS=-O3 -m64 $(GENCODE_FLAGS) $(INC_FLAGS)
 OBJS=$(OBJDIR)/main.o $(OBJDIR)/PF.o 
 
 CXXFLAGS += -I$(CUDA_PATH)/include/ -I$(MAT_FLAGS) $(MAT_LDFLAGS) -L$(CUDA_PATH)/lib64/ -lcudart -lmat -lmx -Wl,-rpath=$(MAT_PATH)/bin/glnxa64
-
 
 .PHONY: dirs clean
 
